--- a/misc/systemd/piwik-archive.service
+++ b/misc/systemd/piwik-archive.service
@@ -1,3 +1,7 @@
+[Unit]
+Description=Piwik archiving
+Documentation=http://piwik.org/docs/setup-auto-archiving/
+
 [Service]
 Type=oneshot
 WorkingDirectory=/path/to/your/piwik-installation/
