--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,8 @@ before_script:
   - date
   - php -r "var_dump(gd_info());"
   - mysql -e 'create database piwik_tests;'
+  # Log Analytics uses Python
+  - python --version
   - ./tests/travis/prepare.sh
   - ./tests/travis/setup_webserver.sh
   - cd tests/PHPUnit
