--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ before_script:
   - php -r "var_dump(gd_info());"
   - mysql -e 'create database piwik_tests;'
   # Make sure we use Python 2.6
-  - sudo add-apt-repository ppa:fkrull/deadsnakes
+  - sudo add-apt-repository ppa:fkrull/deadsnakes -y
   - sudo apt-get update
   - sudo apt-get install python2.6 python2.6-dev
   # Log Analytics works with Python 2.6 or 2.7 but we want to test on 2.6
