Is python2.6 available?

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,7 @@ before_script:
   - sudo apt-get update
   - sudo apt-get install python2.6 python2.6-dev
   # Log Analytics works with Python 2.6 or 2.7 but we want to test on 2.6
+  - python2.6 --version
   - python --version
   - ./tests/travis/prepare.sh
   - ./tests/travis/setup_webserver.sh
