--- a/.travis.yml
+++ b/.travis.yml
@@ -115,7 +115,10 @@ after_script:
   - ./tests/travis/upload_artifacts.sh
 
 notifications:
-  slack: piwik:3HWhNh21qPfDACQXTrJOb0mW
+  slack:
+    rooms:
+      - piwik:3HWhNh21qPfDACQXTrJOb0mW
+      - piwikpro:7OABSbDrywSTo2nv9lD2svXG
 
   irc:
     skip_join: true
