attempting to remove one cause of random build failure eg. https://travis-ci.org/piwik/piwik/jobs/28488319

--- a/.travis.yml
+++ b/.travis.yml
@@ -93,9 +93,9 @@ before_script:
   - php -r "var_dump(gd_info());"
   - mysql -e 'create database piwik_tests;'
   # Make sure we use Python 2.6
-  - sudo add-apt-repository ppa:fkrull/deadsnakes -y
+  - travis_retry sudo add-apt-repository ppa:fkrull/deadsnakes -y
   - travis_retry sudo apt-get update
-  - sudo apt-get install python2.6 python2.6-dev
+  - travis_retry sudo apt-get install python2.6 python2.6-dev
   # Log Analytics works with Python 2.6 or 2.7 but we want to test on 2.6
   - python2.6 --version
   - python --version
