add travis_retry to prevent random build failure eg. https://travis-ci.org/piwik/piwik/jobs/29180844

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,8 +86,8 @@ before_script:
   - mysql -e "SELECT @@sql_mode;"
   # Setup Piwik stack
   - ./tests/travis/initiate_ui_tests.sh
-  - composer self-update
-  - composer install
+  - travis_retry composer self-update
+  - travis_retry composer install
   - uname -a
   - date
   - php -r "var_dump(gd_info());"
