--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "support": {
         "forum": "http://forum.piwik.org/",
-        "issues": "http://dev.piwik.org/trac/roadmap",
+        "issues": "https://github.com/piwik/piwik/issues",
         "wiki": "http://dev.piwik.org/",
         "source": "https://github.com/piwik/piwik"
     },
