Disable Zend allocator on travis for PHP version == 5.3 since it causes random segfaults.

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,8 @@ matrix:
 script: ./travis.sh
 
 before_script:
+  - # do not use the Zend allocator on PHP 5.3 since it will randomly segfault after program execution
+  - '[ "$TRAVIS_PHP_VERSION" == "5.3" ] && export USE_ZEND_ALLOC=0'
   - mysql --version
   - mysql -e "SELECT VERSION();"
   - mysql -e "SET GLOBAL sql_mode = 'NO_ENGINE_SUBSTITUTION'" # Travis default
