--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ script: ./travis.sh
 
 before_install:
   - # do not use the Zend allocator on PHP 5.3 since it will randomly segfault after program execution
-  - '[ "$TRAVIS_PHP_VERSION" == "5.3" ] && export USE_ZEND_ALLOC=0'
+  - '[[ "$TRAVIS_PHP_VERSION" == "5.3" ]] && export USE_ZEND_ALLOC=0 || true'
 
 before_script:
   - mysql --version
