--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,20 @@ matrix:
   allow_failures:
     - php: hhvm
     - php: 5.6
+    - php: 5.4
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Core
+    - php: 5.4
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Plugins
+    - php: 5.4
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Integration
+  include:
+    # Code Coverage
+    - php: 5.4
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Core
+    - php: 5.4
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Plugins
+    - php: 5.4
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Integration
   exclude:
     # Javascript tests need to run only on one PHP version
     - php: 5.4
@@ -91,6 +105,10 @@ install:
   - git checkout master -- ./tests/travis ./plugins/CoreConsole || true
 
 before_script:
+  - if [ -z "$TEST_SUITE" ];
+    then composer require satooshi/php-coveralls dev-master;
+    fi
+
   - ./tests/travis/configure_git.sh
 
   # print out mysql information
@@ -138,6 +156,10 @@ before_script:
 after_script:
   # change directory back to root travis dir
   - cd $PIWIK_ROOT_DIR
+
+  - if [ -z "$TEST_SUITE" ];
+    then php vendor/bin/coveralls -v;
+    fi
 
   # output contents of files w/ debugging info to screen
   - cat /var/log/nginx/error.log
