--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,18 @@
         "wiki": "http://dev.piwik.org/",
         "source": "https://github.com/piwik/piwik"
     },
+    "autoload": {
+        "psr-4": {
+            "Piwik\\Plugins\\": "plugins/",
+            "Piwik\\": "core/"
+        },
+        "psr-0": {
+            "Zend_": "libs/",
+            "HTML_": "libs/",
+            "PEAR_": "libs/",
+            "Archive_": "libs/"
+        }
+    },
     "require": {
         "php": ">=5.3.2",
         "twig/twig": "1.*",
