refs #4224 - exclude example plugins from codecoverage reports

--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -53,6 +53,7 @@
         <directory suffix=".php">../../plugins</directory>
         <exclude>
             <directory suffix=".php">../../core/Updates</directory>
+            <directory suffix=".php">../../plugins/Example*</directory>
             <directory suffix=".php">../../plugins/*/Updates</directory>
             <directory suffix=".php">../../plugins/*/libs</directory>
             <directory suffix=".php">../../plugins/*/tests</directory>
