do not run PHP 5.6 tests with mysqli

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,12 @@ matrix:
       env: TEST_SUITE=PluginTests MYSQL_ADAPTER=MYSQLI
     - php: 5.5
       env: TEST_SUITE=CoreTests MYSQL_ADAPTER=MYSQLI
+    - php: 5.6
+      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=MYSQLI
+    - php: 5.6
+      env: TEST_SUITE=PluginTests MYSQL_ADAPTER=MYSQLI
+    - php: 5.6
+      env: TEST_SUITE=CoreTests MYSQL_ADAPTER=MYSQLI
     - php: hhvm
       env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=MYSQLI
     - php: hhvm
