refs #4224 - ignore SecurityInfo plugin in code coverage

--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -54,6 +54,7 @@
         <exclude>
             <directory suffix=".php">../../core/Updates</directory>
             <directory suffix=".php">../../plugins/Example*</directory>
+            <directory suffix=".php">../../plugins/SecurityInfo*</directory>
             <directory suffix=".php">../../plugins/*/Updates</directory>
             <directory suffix=".php">../../plugins/*/libs</directory>
             <directory suffix=".php">../../plugins/*/tests</directory>
