--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,55 @@
-bootstrap.php
-build
-composer.phar
-config/config.ini.php
-config/config*
-crossdomain.xml
-documentation
-docs/
+/bootstrap.php
+/build
+/composer.phar
+/config/config*
+/crossdomain.xml
+/documentation
+/docs/
 /favicon.ico
-js/yui*
-misc/*.dat
-misc/user/logo-header.png
-misc/user/logo.png
-misc/user/logo.svg
-misc/user/favicon.png
-php_errors.log
-piwik-min.js
-plugins/*.zip
-plugins/ImageGraph/fonts/unifont.ttf
-plugins/ImageGraph/fonts/unifont.ttf.zip
-robots.txt
-tmp
-tmp/*
-vendor/
-.cache
-.DS_Store
-.externalToolBuilders
-.idea/*
-.metadata
-.project
-.settings
-*.buildpath
-*.tmp
-tests/javascript/enable_sqlite
-tests/javascript/enable_sqlite
-tests/javascript/unittest.dbf
-tests/javascript/unittest2.dbf
-tests/lib/geoip-files/*.dat*
-tests/lib/xhprof*
-tests/PHPUnit/Integration/processed/
-tests/PHPUnit/phpunit.xml
-tests/results/
+/js/yui*
+/misc/*.dat
+/misc/user/logo-header.png
+/misc/user/logo.png
+/misc/user/logo.svg
+/misc/user/favicon.png
+/php_errors.log
+/piwik-min.js
+/plugins/*.zip
+/plugins/ImageGraph/fonts/unifont.ttf
+/plugins/ImageGraph/fonts/unifont.ttf.zip
+/robots.txt
+/tmp/
+/vendor/
+/.cache
+/.DS_Store
+/.externalToolBuilders
+/.idea/*
+/.metadata
+/.project
+/.settings
+/*.buildpath
+/*.tmp
+/tests/javascript/enable_sqlite
+/tests/javascript/unittest.dbf
+/tests/javascript/unittest2.dbf
+/tests/lib/geoip-files/*.dat*
+/tests/lib/xhprof*
+/tests/PHPUnit/Integration/processed/
+/tests/PHPUnit/phpunit.xml
+/tests/results/
 /.htaccess
-config/.htaccess
-core/.htaccess
-js/.htaccess
-lang/.htaccess
-libs/.htaccess
-misc/.htaccess
-misc/cron/.htaccess
-plugins/.htaccess
-*.pyc
-tests/resources/overlay-test-site-real/
-tests/PHPUnit/proxy/libs
-tests/PHPUnit/proxy/piwik.js
-tests/PHPUnit/proxy/plugins
-tests/PHPUnit/proxy/tests
-config/*.config.ini.php
+/config/.htaccess
+/core/.htaccess
+/js/.htaccess
+/lang/.htaccess
+/libs/.htaccess
+/misc/.htaccess
+/misc/cron/.htaccess
+/plugins/.htaccess
+/*.pyc
+/tests/resources/overlay-test-site-real/
+/tests/PHPUnit/proxy/libs
+/tests/PHPUnit/proxy/piwik.js
+/tests/PHPUnit/proxy/plugins
+/tests/PHPUnit/proxy/tests
+/config/*.config.ini.php
