--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -31,7 +31,7 @@
 </php>
 
 <testsuites>
-  <testsuite name="IntegrationTests">
+  <testsuite name="SystemTests">
       <directory>./Integration</directory>
   </testsuite>
   <testsuite name="PluginTests">
