--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "symfony/console": ">=v2.3.5",
         "tedivm/jshrink": "v0.5.1",
         "mustangostang/spyc": "0.5.*",
-        "piwik/device-detector": "dev-master"
+        "piwik/device-detector": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
