--- a/tests/PHPUnit/phpunit.xml.dist
+++ b/tests/PHPUnit/phpunit.xml.dist
@@ -51,12 +51,7 @@
         <directory>./Unit</directory>
         <directory>../../plugins/*/tests/Unit</directory>
         <directory>../../plugins/*/Test/Unit</directory>
-    </testsuite>
-    <testsuite name="UITests">
-        <directory>./UI</directory>
-        <directory>../../plugins/*/tests/UI</directory>
-        <directory>../../plugins/*/Test/UI</directory>
-    </testsuite>
+    </testsuite>s
     <testsuite name="PluginTests">
         <directory>../../plugins/*/tests</directory>
         <directory>../../plugins/*/Test</directory>
