--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ matrix:
     - php: hhvm
     - php: 5.6
     - php: 5.4
-      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Sytem
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=System
     - php: 5.4
       env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Integration
     - php: 5.4
@@ -51,7 +51,7 @@ matrix:
   include:
     # Code Coverage
     - php: 5.4
-      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Sytem
+      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=System
     - php: 5.4
       env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Integration
     - php: 5.4
