--- a/.travis.yml
+++ b/.travis.yml
@@ -163,7 +163,7 @@ before_script:
 
 after_script:
   # change directory back to root travis dir
-  - cd $PIWIK_ROOT_DIR
+  - cd $TRAVIS_BUILD_DIR
 
   - if [ -z "$TEST_SUITE" ];
     then php vendor/bin/coveralls -v;
@@ -176,6 +176,7 @@ after_script:
   - cat $PIWIK_ROOT_DIR/config/config.ini.php
 
   # upload test artifacts (for debugging travis failures)
+  - cd $PIWIK_ROOT_DIR
   - ./tests/travis/upload_artifacts.sh
 
 after_success:
