--- a/tests/travis/piwik_nginx.conf
+++ b/tests/travis/piwik_nginx.conf
@@ -3,9 +3,10 @@ server {
 	root    @PIWIK_ROOT@/;
 	index   index.php index.html;
 
-	location ~ \.php$ {
+	location ~ \.php(/|$) {
 		fastcgi_pass	unix:@PHP_FPM_SOCK@;
 		include	fastcgi_params;
 		fastcgi_read_timeout 300s;
+		fastcgi_split_path_info ^(.+\.php)(/.*)$;
 	}
 }
