--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,9 @@ env:
     - TEST_SUITE=SystemTests MYSQL_ADAPTER=PDO_MYSQL
     - TEST_SUITE=IntegrationTests MYSQL_ADAPTER=PDO_MYSQL
     - TEST_SUITE=UnitTests MYSQL_ADAPTER=PDO_MYSQL
-    # Mysqli
-    - TEST_SUITE=SystemTests MYSQL_ADAPTER=MYSQLI
-    - TEST_SUITE=IntegrationTests MYSQL_ADAPTER=MYSQLI
-    - TEST_SUITE=UnitTests MYSQL_ADAPTER=MYSQLI
+    # All tests after another
+    - TEST_SUITE=AllTests MYSQL_ADAPTER=PDO_MYSQL
+    - TEST_SUITE=AllTests MYSQL_ADAPTER=MYSQLI
     # Javascript tests
     - TEST_SUITE=JavascriptTests MYSQL_ADAPTER=PDO_MYSQL
     - TEST_SUITE=AngularJSTests MYSQL_ADAPTER=PDO_MYSQL
@@ -56,6 +55,17 @@ matrix:
     - php: 5.4
       env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Unit
   exclude:
+    # run all tests not on PHP 5.3.3 and run MySQLI tests only on 5.4
+    - php: 5.4
+      env: TEST_SUITE=AllTests MYSQL_ADAPTER=PDO_MYSQL
+    - php: 5.3.3
+      env: TEST_SUITE=AllTests MYSQL_ADAPTER=MYSQLI
+    - php: 5.5
+      env: TEST_SUITE=AllTests MYSQL_ADAPTER=MYSQLI
+    - php: 5.6
+      env: TEST_SUITE=AllTests MYSQL_ADAPTER=MYSQLI
+    - php: hhvm
+      env: TEST_SUITE=AllTests MYSQL_ADAPTER=MYSQLI
     # Javascript tests need to run only on one PHP version
     - php: 5.4
       env: TEST_SUITE=JavascriptTests MYSQL_ADAPTER=PDO_MYSQL
@@ -74,31 +84,31 @@ matrix:
       env: TEST_SUITE=AngularJSTests MYSQL_ADAPTER=PDO_MYSQL
     - php: hhvm
       env: TEST_SUITE=AngularJSTests MYSQL_ADAPTER=PDO_MYSQL
-    # Only run Mysqli tests on PHP 5.4
+    # Run test suites separately only on PHP 5.4 with PDO
     - php: 5.3.3
-      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.3.3
-      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.3.3
-      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.5
-      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.5
-      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.5
-      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.6
-      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.6
-      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=PDO_MYSQL
     - php: 5.6
-      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=PDO_MYSQL
     - php: hhvm
-      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=SystemTests MYSQL_ADAPTER=PDO_MYSQL
     - php: hhvm
-      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=IntegrationTests MYSQL_ADAPTER=PDO_MYSQL
     - php: hhvm
-      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=MYSQLI
+      env: TEST_SUITE=UnitTests MYSQL_ADAPTER=PDO_MYSQL
 
 script: $PIWIK_ROOT_DIR/tests/travis/travis.sh
 
