disable xdebug only if we have a test suite. Otherwise will be disabled when generating coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -118,7 +118,7 @@ install:
   - git checkout master -- ./tests/travis ./plugins/CoreConsole || true
 
 before_script:
-  - if ([ -n "$TEST_SUITE" ] || [ -z "$PLUGIN_NAME" ]);
+  - if ([ -n "$TEST_SUITE" ]);
     then phpenv config-rm xdebug.ini
     fi
   - if ([ -z "$TEST_SUITE" ] || [ -n "$PLUGIN_NAME" ]);
