i think there was a semi-colon missing

--- a/.travis.yml
+++ b/.travis.yml
@@ -119,7 +119,7 @@ install:
 
 before_script:
   - if ([ -n "$TEST_SUITE" ]);
-    then phpenv config-rm xdebug.ini
+    then phpenv config-rm xdebug.ini;
     fi
   - if ([ -z "$TEST_SUITE" ] || [ -n "$PLUGIN_NAME" ]);
     then composer require satooshi/php-coveralls dev-master;
