--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,8 @@ matrix:
       env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Integration
     - php: 5.4
       env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Unit
+    - php: 5.6
+      env: TEST_SUITE=AllTests MYSQL_ADAPTER=PDO_MYSQL
   include:
     # Code Coverage
     - php: 5.4
