only notify Slack when the build status changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -197,10 +197,13 @@ notifications:
     rooms:
       - piwik:3HWhNh21qPfDACQXTrJOb0mW
       - piwikpro:7OABSbDrywSTo2nv9lD2svXG
+    on_success: change
+    on_failure: change
 
   irc:
     skip_join: true
     on_success: change
+    on_failure: change
     channels:
       - "irc.freenode.org#piwik-dev"
     template:
