refs #6496 fix failing test

--- a/bower.json
+++ b/bower.json
@@ -14,17 +14,17 @@
   ],
   "dependencies": {
     "jquery-ui": "1.10.4",
-    "jquery": "1.11.*",
-    "angular": "~1.2",
-    "angular-sanitize": "~1.2",
-    "angular-animate": "~1.2",
-    "angular-cookies": "~1.2",
-    "angular-mocks": "~1.2",
-    "ngDialog": "~0.2",
-    "html5shiv": "~3.7",
-    "mousetrap": "~1.4",
+    "jquery": "~1.11.0",
+    "angular": "~1.2.0",
+    "angular-sanitize": "~1.2.0",
+    "angular-animate": "~1.2.0",
+    "angular-cookies": "~1.2.0",
+    "angular-mocks": "~1.2.0",
+    "ngDialog": "~0.2.0",
+    "html5shiv": "~3.7.0",
+    "mousetrap": "~1.4.0",
     "sprintf": "~1.0.0",
-    "jScrollPane": "~2.0.14",
+    "jScrollPane": "~2.0.0",
     "jquery-mousewheel": "~3.1.12",
     "jquery-placeholder": "~2.0.8",
     "jquery.scrollTo": "~1.4.13",
