--- a/.travis.yml
+++ b/.travis.yml
@@ -168,8 +168,8 @@ notifications:
     rooms:
       - piwik:3HWhNh21qPfDACQXTrJOb0mW
       - piwikpro:7OABSbDrywSTo2nv9lD2svXG
-    on_success: change
-    on_failure: change
+    on_success: :change
+    on_failure: :change
 
   irc:
     skip_join: true
