--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,10 @@
         "piwik/decompress": "~0.1.0"
     },
     "require-dev": {
+        "aws/aws-sdk-php": "2.7.1",
         "phpunit/phpunit": "~4.1",
-        "facebook/xhprof": "dev-master"
+        "facebook/xhprof": "dev-master",
+        "phpseclib/phpseclib": "~0.3.8"
     },
     "repositories": [
         {
