--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "twig/twig": "~1.0",
         "leafo/lessphp": "~0.4.0",
         "symfony/console": "~2.3",
+        "symfony/finder": "~2.3",
         "tedivm/jshrink": "~0.5.1",
         "mustangostang/spyc": "~0.5.0",
         "piwik/device-detector": "~2.0",
