refs #6533 move travis yml generator to testrunner plugin. This way the command will be only available via git in the future as we hopefully remove TestRunner plugin from latest.zip

--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ before_install:
 install:
   # make sure travis test scripts are always latest (so in older releases/branches, the latest scripts will still be used)
   - git fetch
-  - git checkout master -- ./tests/travis ./plugins/CoreConsole || true
+  - git checkout master -- ./tests/travis ./plugins/TestRunner || true
 
 before_script:
   - if ([ -n "$TEST_SUITE" ]);
