--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "mustangostang/spyc": "~0.5.0",
         "piwik/device-detector": "~2.0",
         "piwik/decompress": "~0.1.1",
-        "mnapoli/php-di": "~4.4.0"
+        "mnapoli/php-di": "5.0.x-dev"
     },
     "require-dev": {
         "aws/aws-sdk-php": "2.7.1",
