#6635 rename phpunit.xml to phpunit.xml.dist. did not know it is supported out of the box by phpunit

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ php_errors.log
 /tests/lib/geoip-files/*.dat*
 /tests/lib/xhprof*
 /tests/PHPUnit/System/processed/
+tests/PHPUnit/phpunit.xml
 /tests/results/
 /.htaccess
 /config/.htaccess
