--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "piwik/device-detector": "~2.0",
         "piwik/decompress": "~0.1.1",
         "piwik/network": "~0.1.0",
-        "mnapoli/php-di": "5.0.x-dev"
+        "mnapoli/php-di": "5.0.x-dev",
+        "piwik/cache": "~0.2"
     },
     "require-dev": {
         "aws/aws-sdk-php": "2.7.1",
