--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "aws/aws-sdk-php": "2.7.1",
         "phpunit/phpunit": "~4.1",
         "facebook/xhprof": "dev-master",
-        "phpseclib/phpseclib": "~0.3.8"
+        "phpseclib/phpseclib": "~0.3.8",
+        "symfony/var-dumper": "~2.6"
     },
     "repositories": [
         {
