--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "php": ">=5.3.3",
         "twig/twig": "~1.0",
         "leafo/lessphp": "~0.4.0",
-        "symfony/console": "~2.3",
+        "symfony/console": "~2.6",
         "tedivm/jshrink": "~0.5.1",
         "mustangostang/spyc": "~0.5.0",
         "piwik/device-detector": "~2.0",
@@ -49,7 +49,8 @@
         "piwik/cache": "~0.2",
         "psr/log": "~1.0",
         "monolog/monolog": "~1.11",
-        "symfony/monolog-bridge": "~2.5"
+        "symfony/monolog-bridge": "~2.6",
+        "symfony/event-dispatcher": "~2.6"
     },
     "require-dev": {
         "aws/aws-sdk-php": "2.7.1",
