Fixes #6882, use mysql 5.6 in travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,8 @@ install:
   - git checkout master -- ./tests/travis ./plugins/TestRunner || true
 
 before_script:
+  - ./tests/travis/install_mysql_5.6.sh
+
   - if ([ -z "$TEST_SUITE" ] || [ -n "$PLUGIN_NAME" ]);
     then composer require satooshi/php-coveralls dev-master;
     else
