--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "piwik/network": "~0.1.0",
         "mnapoli/php-di": "5.0.x-dev",
         "piwik/cache": "~0.2",
+        "doctrine/cache": "dev-filecache-race-condition-fix as 1.3.1",
         "psr/log": "~1.0",
         "monolog/monolog": "~1.11",
         "symfony/monolog-bridge": "~2.6",
@@ -85,6 +86,10 @@
                     "reference": "master"
                 }
             }
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/piwik/cache.git"
         }
     ],
     "scripts": {
