--- a/.gitmodules
+++ b/.gitmodules
@@ -30,6 +30,11 @@
 	path = plugins/LoginHttpAuth
 	url = https://github.com/piwik/plugin-LoginHttpAuth.git
     branch = master
+
+# Note: when you add a submodule that SHOULD be left in the packaged release such as the few submodules below,
+#       then you MUST add these submodules names in the SUBMODULES_PACKAGED_WITH_CORE variable in:
+#       https://github.com/piwik/piwik-package/blob/master/scripts/build-package.sh
+
 [submodule "plugins/QueuedTracking"]
 	path = plugins/QueuedTracking
 	url = https://github.com/piwik/plugin-QueuedTracking.git
