--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ php_errors.log
 /plugins/ImageGraph/fonts/unifont.ttf
 /plugins/ImageGraph/fonts/unifont.ttf.zip
 /plugins/*/tests/System/processed
+/plugins/*/tests/UI/processed-ui-screenshots
+/plugins/*/tests/UI/screenshot-diffs
 /robots.txt
 /tmp/
 /vendor/
