--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,9 @@
         "piwik/device-detector": "~2.0",
         "piwik/decompress": "~0.1.1",
         "piwik/network": "~0.1.0",
-        "mnapoli/php-di": "5.0.x-dev",
         "piwik/cache": "~0.2",
+        "piwik/ini": "~1.0",
+        "mnapoli/php-di": "5.0.x-dev",
         "doctrine/cache": "dev-filecache-race-condition-fix as 1.3.1",
         "psr/log": "~1.0",
         "monolog/monolog": "~1.11",
