--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
     path = libs/PiwikTracker
     url = https://github.com/piwik/piwik-php-tracker.git
     branch = master
+[submodule "tests/PHPUnit/UI/expected-ui-screenshots"]
+	path = tests/PHPUnit/UI/expected-ui-screenshots
+	url = https://github.com/piwik/piwik-ui-tests.git
