Run the Travis CI build on PHP 5.3.* instead of 5.3.3 This may help our random failures on 5.3.3 -> we need green build on master at all times and can't afford those random 5.3.3 failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ language: php
 
 php:
   - 5.6
-  - 5.3.3
+  - 5.3
 #  - hhvm
 
 services:
@@ -145,7 +145,7 @@ before_script:
   - ./tests/travis/prepare.sh
   - ./tests/travis/setup_webserver.sh
 
-  - export GENERATE_TRAVIS_YML_COMMAND="php ./console generate:travis-yml --core --verbose"
+  - export GENERATE_TRAVIS_YML_COMMAND="php ./console generate:travis-yml --core"
   - ./tests/travis/autoupdate_travis_yml.sh
 
   - cd tests/PHPUnit
