--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,8 @@ matrix:
   fast_finish: true
   allow_failures:
     - php: hhvm
-    - php: 5.6
-      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Integration
-    - php: 5.6
-      env: MYSQL_ADAPTER=PDO_MYSQL COVERAGE=Unit
+    - php: 5.3
+      env: TEST_SUITE=AllTests MYSQL_ADAPTER=MYSQLI
   exclude:
     # Run test suites separately only on PHP 5.4 with PDO
     - php: 5.3
