--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ install:
 before_script:
   - ./tests/travis/install_mysql_5.6.sh
 
-  phpenv config-rm xdebug.ini;
+  - phpenv config-rm xdebug.ini;
 
   # add always_populate_raw_post_data=-1 to php.ini
   - echo "always_populate_raw_post_data=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
