--- a/composer.json
+++ b/composer.json
@@ -54,38 +54,12 @@
     "require-dev": {
         "aws/aws-sdk-php": "2.7.1",
         "phpunit/phpunit": "~4.8",
-        "facebook/xhprof": "dev-master",
         "phpseclib/phpseclib": "~0.3.8",
         "symfony/var-dumper": "~2.6.0",
-        "symfony/yaml": "~2.6.0"
+        "symfony/yaml": "~2.6.0",
+        "lox/xhprof": "dev-master"
     },
     "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "facebook/xhprof",
-                "type": "library",
-                "description": "XHProf: A Hierarchical Profiler for PHP",
-                "keywords": ["profiling", "performance"],
-                "homepage": "http://pecl.php.net/package/xhprof",
-                "license": "Apache-2.0",
-                "version": "master",
-                "require": {
-                    "php": ">=5.2.0"
-                },
-                "autoload": {
-                    "files": [
-                        "xhprof_lib/utils/xhprof_lib.php",
-                        "xhprof_lib/utils/xhprof_runs.php"
-                    ]
-                },
-                "source": {
-                    "type": "git",
-                    "url": "https://github.com/phacility/xhprof",
-                    "reference": "master"
-                }
-            }
-        },
         {
             "type": "package",
             "package": {
