--- a/.travis.yml
+++ b/.travis.yml
@@ -74,10 +74,13 @@ matrix:
       sudo: required
     # UITests use a specific version because the default 5.5 (== 5.5.38) is missing FreeType support
     - php: 5.5.33
-      env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--run-first-half-only"
+      env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--num-test-groups=3 --test-group=0"
       sudo: false
     - php: 5.5.33
-      env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--run-second-half-only"
+      env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--num-test-groups=3 --test-group=1"
+      sudo: false
+    - php: 5.5.33
+      env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--num-test-groups=3 --test-group=2"
       sudo: false
 
 dist: trusty
