--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require": {
         "php": ">=7.2.0",
         "composer/semver": "~1.3.0",
-        "davaxi/sparkline": "dev-multiple-series",
+        "davaxi/sparkline": "~1.2",
         "geoip2/geoip2": "^2.8",
         "leafo/lessphp": "dev-php74-compat",
         "matomo-org/jshrink": "1.3.1",
@@ -89,10 +89,6 @@
                     "reference": "v1.3.1"
                 }
             }
-        },
-        {
-            "type": "git",
-            "url": "https://github.com/matomo-org/Sparkline.git"
         },
         {
             "type": "git",
