--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,9 @@
         "symfony/console": "~2.6.0",
         "mustangostang/spyc": "~0.6.0",
         "piwik/device-detector": "~3.0",
-        "piwik/decompress": "~1.0",
-        "piwik/network": "~0",
-        "piwik/cache": "~1.0.0",
-        "piwik/ini": "^1.0.8",
+        "matomo/decompress": "~2.0",
+        "matomo/cache": "~2.0",
+        "matomo/ini": "~2.0",
         "php-di/php-di": "^5.0.0",
         "psr/log": "~1.0",
         "monolog/monolog": "~1.11",
@@ -44,12 +43,13 @@
         "matomo/referrer-spam-blacklist": "~1.0",
         "matomo/searchengine-and-social-list": "~1.0",
         "tecnickcom/tcpdf": "~6.0",
-        "piwik/piwik-php-tracker": "^1.0.0",
         "composer/semver": "~1.3.0",
         "szymach/c-pchart": "^2.0",
         "geoip2/geoip2": "^2.8",
         "davaxi/sparkline": "dev-multiple-series",
-        "matomo-org/jshrink": "1.3.1"
+        "matomo-org/jshrink": "1.3.1",
+        "matomo/network": "~2.0",
+        "matomo/matomo-php-tracker": "~2.0"
     },
     "require-dev": {
         "aws/aws-sdk-php": "2.7.1",
@@ -148,7 +148,8 @@
             "HTML_": "libs/",
             "PEAR_": "libs/",
             "Archive_": "libs/"
-        }
+        },
+        "files": ["LegacyAutoloader.php"]
     },
     "autoload-dev": {
         "psr-4": {
