--- a/composer.json
+++ b/composer.json
@@ -22,40 +22,41 @@
         "platform": {
             "php": "7.2.0"
         },
-        "prepend-autoloader": false
+        "prepend-autoloader": false,
+        "sort-packages": true
     },
     "require": {
         "php": ">=7.2.0",
-        "twig/twig": "~1.0",
+        "composer/semver": "~1.3.0",
+        "davaxi/sparkline": "dev-multiple-series",
+        "geoip2/geoip2": "^2.8",
         "leafo/lessphp": "dev-php74-compat",
-        "symfony/console": "~2.6.0",
-        "mustangostang/spyc": "~0.6.0",
-        "piwik/device-detector": "~3.0",
-        "matomo/decompress": "~2.0",
+        "matomo-org/jshrink": "1.3.1",
         "matomo/cache": "~2.0",
+        "matomo/decompress": "~2.0",
         "matomo/ini": "~2.0",
-        "php-di/php-di": "^5.0.0",
-        "psr/log": "~1.0",
-        "monolog/monolog": "~1.11",
-        "symfony/monolog-bridge": "~2.6.0",
-        "symfony/event-dispatcher": "~2.6.0",
-        "pear/pear_exception": "~1.0.0",
+        "matomo/matomo-php-tracker": "~2.0",
+        "matomo/network": "~2.0",
         "matomo/referrer-spam-blacklist": "~1.0",
         "matomo/searchengine-and-social-list": "~1.0",
-        "tecnickcom/tcpdf": "~6.0",
-        "composer/semver": "~1.3.0",
+        "monolog/monolog": "~1.11",
+        "mustangostang/spyc": "~0.6.0",
+        "pear/pear_exception": "~1.0.0",
+        "php-di/php-di": "^5.0.0",
+        "piwik/device-detector": "~3.0",
+        "psr/log": "~1.0",
+        "symfony/console": "~2.6.0",
+        "symfony/event-dispatcher": "~2.6.0",
+        "symfony/monolog-bridge": "~2.6.0",
         "szymach/c-pchart": "^2.0",
-        "geoip2/geoip2": "^2.8",
-        "davaxi/sparkline": "dev-multiple-series",
-        "matomo-org/jshrink": "1.3.1",
-        "matomo/network": "~2.0",
-        "matomo/matomo-php-tracker": "~2.0"
+        "tecnickcom/tcpdf": "~6.0",
+        "twig/twig": "~1.0"
     },
     "require-dev": {
         "aws/aws-sdk-php": "2.7.1",
-        "phpunit/phpunit": "~4.8",
         "facebook/xhprof": "dev-master",
         "phpseclib/phpseclib": "~0.3.8",
+        "phpunit/phpunit": "~4.8",
         "symfony/var-dumper": "~2.6.0",
         "symfony/yaml": "~2.6.0"
     },
