--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 	url = https://github.com/matomo-org/matomo-icons.git
 
 # Note: do not add new plugin submodules here, but a few lines above
+[submodule "plugins/Provider"]
+	path = plugins/Provider
+	url = https://github.com/matomo-org/plugin-Provider.git
