readd provider plugin
regression from #15410

--- a/.gitmodules
+++ b/.gitmodules
@@ -57,6 +57,15 @@
 [submodule "plugins/DeviceDetectorCache"]
 	path = plugins/DeviceDetectorCache
 	url = https://github.com/matomo-org/plugin-DeviceDetectorCache.git
+[submodule "plugins/Provider"]
+	path = plugins/Provider
+	url = https://github.com/matomo-org/plugin-Provider.git
+
+# Add new Plugin submodule above this line ^^
+#
+# Note: when you add a submodule that SHOULD be left in the packaged release such as the few submodules below,
+#       then you MUST add these submodules names in the SUBMODULES_PACKAGED_WITH_CORE variable in:
+#       https://github.com/matomo-org/matomo-package/blob/master/scripts/build-package.sh
 [submodule "misc/log-analytics"]
     path = misc/log-analytics
     url = https://github.com/matomo-org/matomo-log-analytics.git
