--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,9 @@ services:
 
 addons:
   apt:
-    sources:
-      - github-git-lfs-xenial
     packages:
-      - git-lfs
       - nginx
-      - realpath
+      - coreutils
       - lftp
 
 git:
@@ -60,11 +57,13 @@ matrix:
     - php: 7.2
       env: TEST_SUITE=JavascriptTests MYSQL_ADAPTER=PDO_MYSQL
       sudo: false
+      service:
+        - mysql
       addons:
         apt:
           packages:
             - nginx
-            - realpath
+            - coreutils
     - php: 7.2
       env: TEST_SUITE=AngularJSTests MYSQL_ADAPTER=PDO_MYSQL SKIP_COMPOSER_INSTALL=1
       sudo: false
@@ -84,8 +83,7 @@ matrix:
       env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--run-second-half-only"
       sudo: false
 
-dist: xenial
-
+dist: bionic
 
 script: $PIWIK_ROOT_DIR/tests/travis/travis.sh
 
@@ -95,7 +93,7 @@ before_install:
 install:
   - git fetch -q
 
-  - export GENERATE_TRAVIS_YML_COMMAND="php ./tests/travis/generator/main.php generate:travis-yml --core --distribution=\"xenial\" --verbose"
+  - export GENERATE_TRAVIS_YML_COMMAND="php ./tests/travis/generator/main.php generate:travis-yml --core --distribution=\"bionic\" --verbose"
   - '[[ "$TRAVIS_JOB_NUMBER" != *.1 || "$TRAVIS_PULL_REQUEST" != "false" ]] || ./tests/travis/autoupdate_travis_yml.sh'
 
   - ./tests/travis/configure_git.sh
