--- a/.travis.yml
+++ b/.travis.yml
@@ -78,9 +78,11 @@ matrix:
     # UITests use a specific version because the default 5.5 (== 5.5.38) is missing FreeType support
     - php: 7.2
       env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--run-first-half-only"
+      dist: xenial
       sudo: false
     - php: 7.2
       env: TEST_SUITE=UITests MYSQL_ADAPTER=PDO_MYSQL UITEST_EXTRA_OPTIONS="--run-second-half-only"
+      dist: xenial
       sudo: false
 
 dist: bionic
