--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "mustangostang/spyc": "~0.6.0",
         "pear/pear_exception": "~1.0.0",
         "php-di/php-di": "^5.0.0",
+        "phpmailer/phpmailer": "^6.1",
         "piwik/device-detector": "~3.0",
         "psr/log": "~1.0",
         "symfony/console": "~2.6.0",
