--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
         "symfony/console": "~2.6.0",
         "mustangostang/spyc": "~0.6.0",
         "piwik/device-detector": "~3.0",
-        "piwik/decompress": "~1.0",
-        "piwik/network": "~0",
-        "piwik/cache": "~1.0.0",
-        "piwik/ini": "^1.0.8",
+        "matomo/decompress": "~1.0",
+        "matomo/network": "~0",
+        "matomo/cache": "~1.0.0",
+        "matomo/ini": "^1.0.8",
         "php-di/php-di": "^5.0.0",
         "psr/log": "~1.0",
         "monolog/monolog": "~1.11",
@@ -44,7 +44,7 @@
         "matomo/referrer-spam-blacklist": "~1.0",
         "matomo/searchengine-and-social-list": "~3.0",
         "tecnickcom/tcpdf": "~6.0",
-        "piwik/piwik-php-tracker": "^1.0.0",
+        "matomo/matomo-php-tracker": "^1.0.0",
         "composer/semver": "~1.3.0",
         "szymach/c-pchart": "^2.0",
         "geoip2/geoip2": "^2.8",
