--- a/composer.json
+++ b/composer.json
@@ -107,7 +107,8 @@
             "HTML_": "libs/",
             "PEAR_": "libs/",
             "Archive_": "libs/"
-        }
+        },
+        "files": ["LegacyAutoloader.php"]
     },
     "autoload-dev": {
         "psr-4": {
