--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "matomo/ini": "~2.0",
         "matomo/matomo-php-tracker": "dev-4.x-dev",
         "matomo/network": "~2.0",
-        "matomo/referrer-spam-blacklist": "^3.11",
+        "matomo/referrer-spam-list": "~4.0.0",
         "matomo/searchengine-and-social-list": "~3.0",
         "monolog/monolog": "~1.11",
         "mustangostang/spyc": "~0.6.0",
