--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "matomo-org/jshrink": "1.3.1",
         "matomo/cache": "~2.0",
         "matomo/decompress": "~2.0",
+        "matomo/device-detector": "^4.0",
         "matomo/ini": "~2.0",
         "matomo/matomo-php-tracker": "dev-4.x-dev",
         "matomo/network": "~2.0",
@@ -44,7 +45,6 @@
         "pear/pear_exception": "~1.0.0",
         "php-di/php-di": "^6.0.0",
         "phpmailer/phpmailer": "^6.1",
-        "piwik/device-detector": "~3.0",
         "psr/log": "~1.0",
         "symfony/console": "~2.6.0",
         "symfony/event-dispatcher": "~2.6.0",
