--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "wiki": "https://github.com/matomo-org/matomo/wiki",
         "source": "https://github.com/matomo-org/matomo"
     },
-    "config":{
+    "config": {
         "platform": {
             "php": "7.2.5"
         },
@@ -50,7 +50,7 @@
         "symfony/monolog-bridge": "~2.6.0",
         "szymach/c-pchart": "^2.0",
         "tecnickcom/tcpdf": "~6.0",
-        "tedivm/jshrink": "^1.3.1",
+        "tedivm/jshrink": "dev-master#aed09eace9d498e18d48a5b62a7e5a97dfc0e55d",
         "twig/twig": "^3.0"
     },
     "require-dev": {
