--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "matomo/decompress": "~2.0",
         "matomo/device-detector": "^4.0",
         "matomo/ini": "~2.0",
-        "matomo/matomo-php-tracker": "dev-4.x-dev",
+        "matomo/matomo-php-tracker": "^3.0",
         "matomo/network": "~2.0",
         "matomo/referrer-spam-list": "~4.0.0",
         "matomo/searchengine-and-social-list": "~3.0",
